# zoduki

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/zoduki/: __init__.py  plugin.py
