[project]
name = "mkdocs-zoduki"
version = "0.1.0"
description = "MkDocs plugin for step-by-step assembly guides"
readme = "README.md"
license = "MPLv2"
requires-python = ">=3.10"
authors = [
    { name = "Stephen Hawes", email = "sphawes@gmail.com" },
]
dependencies = [
    "mkdocs>=1.6"
]

[project.urls]
Homepage = "https://github.com/sphawes/zoduki"
Repository = "https://github.com/sphawes/zoduki"
Issues = "https://github.com/sphawes/zoduki/issues"

[project.entry-points."mkdocs.plugins"]
zoduki = "zoduki:ZodukiPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoduki"]